# python-typeclasses

./: .appveyor.yml  .gitignore  .pydocstyle  .pylintrc  .travis.yml  LICENSE  README.rst  pyproject.toml  tasks.py  tox.ini
.github/workflows/: lint.yml  test.yml
docs/: conf.py  index.rst
docs/_static/: table.css
src/typeclasses/: afunctor.py  json.py
tests/: __init__.py  test_afunctor.py  test_functor.py  test_hash.py  test_tutorial.py
typeclasses/: __init__.py  afunctor.py  decorator.py  functor.py  hash.py  json.py
