[tool.poetry]
name = "typeclasses"
version = "0.2.0"
description = "Extensible methods a la Haskell's typeclasses."
authors = ["John Freeman <jfreeman08@gmail.com>"]
documentation = "https://python-typeclasses.readthedocs.io/"
repository = "https://github.com/thejohnfreeman/python-typeclasses/"
readme = "README.rst"
license = "ISC"
packages = [{ include = "typeclasses" }]

[tool.poetry.dependencies]
python = "^3.6-dev"
dataclasses = {version = "^0.6.0", optional = true}
hypothesis = {version = "^4.24", optional = true}
invoke = {version = "^1.2", optional = true}
mypy = {version = "^0.711.0", optional = true}
pydocstyle = {version = "^3.0", optional = true}
pylint = {version = "^2.3", optional = true}
pytest = {version = "^4.4", optional = true}
pytest-asyncio = {version = "^0.10.0", optional = true}
pytest-cov = {version = "^2.7", optional = true}
sphinx = {version = "^1.8", optional = true}
sphinx-autobuild = {version = "^0.7.1", optional = true}
sphinx_rtd_theme = {version = "^0.4.3", optional = true}
toml = {version = "^0.10.0", optional = true}
tox = {version = "^3.15.1", optional = true}
yapf = {version = "^0.27.0", optional = true}

[tool.poetry.extras]
dev = ["sphinx-autobuild", "yapf"]
docs = ["sphinx", "sphinx_rtd_theme", "toml"]
test = [
  "dataclasses",
  "hypothesis",
  "invoke",
  "mypy",
  "pydocstyle",
  "pylint",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "toml",
  "tox",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
