[tool.poetry]
name = "typeclasses"
version = "0.2.0"
description = "Extensible methods a la Haskell's typeclasses."
authors = ["John Freeman <jfreeman08@gmail.com>"]
documentation = "https://python-typeclasses.readthedocs.io/"
repository = "https://github.com/thejohnfreeman/python-typeclasses/"
readme = "README.rst"
license = "ISC"
packages = [{ include = "typeclasses" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.doc.dependencies]
sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.3"
toml = "^0.10.0"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^0.7.1"
yapf = "^0.27.0"

[tool.poetry.group.test.dependencies]
dataclasses = "^0.6.0"
hypothesis = "^4.24"
mypy = "^1.8.0"
pydocstyle = "^3.0"
pylint = "^2.3"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
toml = "^0.10.0"
tox = "^4.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
